# University-Projects

./: DTMF_Receiver.c  DTMF_Transmitter.c  Experiment1.m  Experiment4.m  PWM.vhd  README.md  SRAM-Controller.v
Bachelor/: README.md
Bachelor/digital communications/: Experiment2_1.m  Experiment2_2.m  Experiment3.m
Bachelor/microprocessors/8051 IC-Tester/: header.h  simple_ic_tester.c  simple_ic_tester.h
Bachelor/microprocessors/8086/: diamond.asm  scrambling encryption.asm  trapezoid.asm
Bachelor/operating systems/: Linux_Shell.c
Masters/Object Oriented Programming with C++/Module_1/: Module_1.code-workspace
Masters/Object Oriented Programming with C++/angry birds game/: README.md
Masters/Object Oriented Programming with C++/angry birds game/src/: CMakeLists.txt  birds.hpp  birdsBaseClass.hpp  build_and_run.sh  config.h  config.h.in  enemies.hpp  gameobject.hpp  main.cpp  map.cpp  map.hpp  materials.hpp  run.sh
Masters/Object Oriented Programming with C++/angry birds game/src/Maps/: basemap.csv  basemap1.csv  basemap3.csv
Masters/Object Oriented Programming with C++/angry birds game/src/cmake_modules/: FindBox2D.cmake
Masters/Programming Parallel Computers/: README.md
Masters/Programming Parallel Computers/common/: grading
Masters/Programming Parallel Computers/cp1/: cp.cc  cp.h  feedback-1.txt  submission-1.txt
Masters/Programming Parallel Computers/cp2a/: cp.asm1  cp.cc  submission-2.txt
Masters/Programming Parallel Computers/cp2b/: cp.cc  feedback-2.txt  submission-2.txt
Masters/Programming Parallel Computers/cp2c/: cp.cc  feedback-3.txt  submission-3.txt
Masters/Programming Parallel Computers/cp3a/: cp.cc  feedback-3.txt  submission-3.txt
Masters/Programming Parallel Computers/cp3b/: cp.cc  feedback-4.txt  submission-4.txt
Masters/Programming Parallel Computers/cp4/: cp.cu  submission-4.txt
Masters/Programming Parallel Computers/cp5/: cp.cu  feedback-5.txt  submission-5.txt
Masters/Programming Parallel Computers/is4/: feedback-5.txt  is-benchmark  is-test  is.cc  pngsegment  submission-5.txt
Masters/Programming Parallel Computers/is6a/: is.cc  submission-6.txt
Masters/Programming Parallel Computers/is6b/: is.cu  submission-6.txt
Masters/Project Work/: README.md  amputude_config.kv  main.py  signal_processing.py
Masters/Project Work/utility/: analyse_signals.m  (+2 more)
(+103 files in other folders)
